--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,13 @@
         ],
         "prettier/prettier": "error",
         "class-methods-use-this": "off",
-        "@typescript-eslint/camelCase": "off"
+        "@typescript-eslint/camelCase": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "_"
+            }
+        ]
     },
     "settings": {
         "import/resolver": {
